// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scores Renders a points graph with a difference of > MAX with p1 winning 1`] = `
<div
  className="scores"
>
  <div
    className="scores__bar scores__bar--1 scores__bar--winning"
    key="player1"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="scores__difference scores__difference--1 scores__difference--winning"
      onClick={[Function]}
    >
      <Confetti
        active={false}
      />
      600
    </div>
  </div>
  <div
    className="scores__bar scores__bar--2"
    key="player2"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Scores Renders a points graph with a difference of > MAX with p2 winning 1`] = `
<div
  className="scores"
>
  <div
    className="scores__bar scores__bar--1"
    key="player1"
    style={
      Object {
        "width": "0%",
      }
    }
  />
  <div
    className="scores__bar scores__bar--2 scores__bar--winning"
    key="player2"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="scores__difference scores__difference--2 scores__difference--winning"
      onClick={[Function]}
    >
      <Confetti
        active={false}
      />
      600
    </div>
  </div>
</div>
`;

exports[`Scores Renders a points graph with player 1 winning 1`] = `
<div
  className="scores"
>
  <div
    className="scores__bar scores__bar--1"
    key="player1"
    style={
      Object {
        "width": "10%",
      }
    }
  >
    <div
      className="scores__difference scores__difference--1"
      onClick={null}
    >
      <Confetti
        active={true}
      />
      100
    </div>
  </div>
  <div
    className="scores__bar scores__bar--2"
    key="player2"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`Scores Renders a points graph with player 2 winning 1`] = `
<div
  className="scores"
>
  <div
    className="scores__bar scores__bar--1"
    key="player1"
    style={
      Object {
        "width": "0%",
      }
    }
  />
  <div
    className="scores__bar scores__bar--2"
    key="player2"
    style={
      Object {
        "width": "10%",
      }
    }
  >
    <div
      className="scores__difference scores__difference--2"
      onClick={null}
    >
      <Confetti
        active={true}
      />
      100
    </div>
  </div>
</div>
`;

exports[`Scores Renders an equal points graph 1`] = `
<div
  className="scores"
>
  <div
    className="scores__bar scores__bar--1"
    key="player1"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    <div
      className="scores__difference scores__difference--1"
      onClick={null}
    >
      <Confetti
        active={true}
      />
      0
    </div>
  </div>
  <div
    className="scores__bar scores__bar--2"
    key="player2"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    <div
      className="scores__difference scores__difference--2"
      onClick={null}
    >
      <Confetti
        active={true}
      />
      0
    </div>
  </div>
</div>
`;
